<resources>
    <string name="app_name">trainer</string>
    <string name="timer_list_fragment_button_stop">Stop</string>
    <string name="timer_list_fragment_button_lap">Lap</string>
    <string name="timer_list_fragment_button_start">Start</string>
    <string name="timer_list_fragment_button_reset">Reset</string>
    <string name="timer_list_adapter_lap">Lap %s</string>

    <string name="dialog_add_schedule_content_training_item">Training item</string>
    <string name="dialog_add_schedule_content_training_strength">Training intensity</string>
    <string name="dialog_add_schedule_content_training_strength_unit">Unit (kg, lb)</string>
    <string name="dialog_add_schedule_content_training_times">Training times</string>
    <string name="dialog_add_schedule_content_training_times_unit">Unit (minutes)</string>

    <string name="dialog_add_schedule_content_add_failed">Wrong data</string>
    <string name="dialog_update_schedule_delete">Delete</string>
    <string name="dialog_update_schedule_confirm_delete_title">Confirm dialog</string>
    <string name="dialog_update_schedule_confirm_delete_message">Do you want to delete data?</string>
</resources>
